Fix bug in sparkling shell launcher.
The sparkling-shell launcher was overriding default value
of `spark.driver.extraJavaOptions`.